--- a/rAthenaLogin.xcodeproj/xcshareddata/xcschemes/rAthenaLogin.xcscheme
+++ b/rAthenaLogin.xcodeproj/xcshareddata/xcschemes/rAthenaLogin.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1240"
+   LastUpgradeVersion = "1250"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "35FD12342652096400BB0968"
-               BuildableName = "rAthenaMap.framework"
-               BlueprintName = "rAthenaMap"
-               ReferencedContainer = "container:rAthena.xcodeproj">
+               BlueprintIdentifier = "35FD11952652094F00BB0968"
+               BuildableName = "rAthenaLogin.framework"
+               BlueprintName = "rAthenaLogin"
+               ReferencedContainer = "container:rAthenaLogin.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -50,10 +50,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "35FD12342652096400BB0968"
-            BuildableName = "rAthenaMap.framework"
-            BlueprintName = "rAthenaMap"
-            ReferencedContainer = "container:rAthena.xcodeproj">
+            BlueprintIdentifier = "35FD11952652094F00BB0968"
+            BuildableName = "rAthenaLogin.framework"
+            BlueprintName = "rAthenaLogin"
+            ReferencedContainer = "container:rAthenaLogin.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
